fix main content button being visible on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -154,7 +154,7 @@
 
   /* Skip to Main Content */
   #skiptocontent a {
-    @apply absolute left-0 top-0 z-50 -translate-y-full transform bg-mustard px-4 py-2 text-black transition hover:bg-light-blue focus:translate-y-0;
+    @apply absolute left-0 top-0 z-50 -translate-y-full transform bg-mustard px-4 py-2 text-black opacity-0 transition hover:bg-light-blue focus:translate-y-0 focus:opacity-100;
   }
 
   /* Modals */
